--- a/styles2.css
+++ b/styles2.css
@@ -19,6 +19,8 @@ ul {list-style-type: none;}
      nav {width: 100%;font-size: 20px;border: none;}
      #section1 {width: 100%;font-size: 20px;}
      #section2 {width: 100%;font-size: 20px;}
+     #section3 {width: 100%;font-size: 20px;}
+     #section4 {width: 100%;font-size: 20px;}
      #footer {width: 100%;border: none;}
      img {width: 100%;}
     }
